# experiments

./: .gitignore  README.md
arch/addition/: aarch64-unknown-linux-gnu.txt  arm-linux-gnueabihf.txt  generator.py  x86_64-pc-linux-gnu.txt  x86_64-unknown-linux-gnu.txt
arch/integer-addition/: aarch64-unknown-linux-gnu.txt  arm-linux-gnueabihf.txt  generator.py  show  x86_64-pc-linux-gnu.txt
arch/sizeof/: main.c
compilers/scev/: inttype.py  scev.ipynb  scev.py
lang/c/sizeof/: main.c
misc/ar/: Makefile  foo.c  main  main.c
misc/drm-vs-x11/: glmark2_drm_results.txt  glmark2_x11_results.txt  glmark2_xinit_results.txt  raspberry.txt  run.sh
misc/find-dependencies/: dependencies.ipynb  find_deps.py
misc/glmark2/: collect.sh  glmark2-drm-results.txt  glmark2-es2-drm-results.txt  glmark2-es2-results.txt  glmark2-results.txt  report.py
misc/manview/: manview.sh
numerics/dirichlet/: CMakeLists.txt  dirichlet_asymmetric.py  main.cpp
numerics/spiral/: main.py
